# Lsp-Client

./: .gitignore  CMakeLists.txt  Readme.md
.metadata/: .lock_info  version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.core/: 1332900339.index  1630265427.index  1865797976.index  2772897092.index  632515186.index  assumedExternalFilesCache  externalFilesCache  externalLibsTimeStamps  indexNamesMap.txt  nonChainingJarsCache  savedIndexNames.txt
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.m2e.core/: CryptoLSPDemo.lifecyclemapping  workspaceState.ser  workspacestate.properties
.metadata/.plugins/org.eclipse.m2e.jdt/: CryptoLSPDemo.container
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.wildwebdeveloper.xml/: system-catalog.xml
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
MBServer/: HelloWorld.java  WukongToolAnalysis.java
src/: exitServer.cpp  file_utils.cpp  file_utils.h  lsp_client.cpp  lsp_client.h  main.cpp
(+58 files in other folders)
